modif text Morgane + modfi alignement index + bux responsive fixed

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,8 +4,7 @@
 }
 
 .title {
-    text-align: center;
-    font-size: 108px;
+    font-size: 90px;
     line-height: 118px;
     letter-spacing: -.03em;
 }
